[gd_scene load_steps=17 format=3 uid="uid://cqhl14wc25qsu"]

[ext_resource type="Script" path="res://Scenes/Player/GrenadeHole.gd" id="1_io6sa"]
[ext_resource type="PackedScene" uid="uid://bw6y23w8mhnus" path="res://Scenes/Player/Sucker.tscn" id="2_s50ex"]
[ext_resource type="PackedScene" uid="uid://bnxyho18mte3p" path="res://Scenes/falling_guy.tscn" id="3_r1g7m"]
[ext_resource type="PackedScene" uid="uid://hvjgou0g2epr" path="res://Scenes/run_away_area.tscn" id="4_3kjme"]
[ext_resource type="Texture2D" uid="uid://cock12487b0b7" path="res://Assets/Player/player0001.png" id="4_6wqlc"]
[ext_resource type="Texture2D" uid="uid://olloh3yqnxdk" path="res://Assets/Player/player0002.png" id="5_rybay"]
[ext_resource type="Texture2D" uid="uid://4ri3hhuy6kca" path="res://Assets/Player/player0003.png" id="6_0nf58"]
[ext_resource type="Texture2D" uid="uid://csfeo3aws18u3" path="res://Assets/Player/player0004.png" id="7_pnelp"]
[ext_resource type="Texture2D" uid="uid://dcesyygm5s513" path="res://Assets/Player/player0005.png" id="8_r11d7"]
[ext_resource type="Texture2D" uid="uid://byuoyxj1l0tai" path="res://Assets/Player/player0006.png" id="9_owcpy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_g4iuf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_6wqlc")
}, {
"duration": 1.0,
"texture": ExtResource("5_rybay")
}, {
"duration": 1.0,
"texture": ExtResource("6_0nf58")
}, {
"duration": 1.0,
"texture": ExtResource("7_pnelp")
}, {
"duration": 1.0,
"texture": ExtResource("8_r11d7")
}, {
"duration": 1.0,
"texture": ExtResource("9_owcpy")
}],
"loop": true,
"name": &"default",
"speed": 32.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v643f"]
radius = 41.0
height = 116.0

[sub_resource type="Animation" id="Animation_lxumb"]
resource_name = "HoleGrowAppear"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.15, 0.15)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7r1c0"]
_data = {
"HoleGrowAppear": SubResource("Animation_lxumb")
}

[sub_resource type="Animation" id="Animation_avgic"]
resource_name = "HoleShrinkDisappear"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.15, 0.15), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v1ry4"]
_data = {
"HoleShrinkDisappear": SubResource("Animation_avgic")
}

[node name="GrenadeHole" type="Area2D" groups=["GrenadeHole"]]
collision_layer = 65
collision_mask = 65
script = ExtResource("1_io6sa")
sucker = ExtResource("2_s50ex")
faller = ExtResource("3_r1g7m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1e-05, 1e-05)
sprite_frames = SubResource("SpriteFrames_g4iuf")
autoplay = "default"
frame_progress = 0.514474

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2(1e-05, 1e-05)
shape = SubResource("CapsuleShape2D_v643f")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Fallers" type="Node2D" parent="."]

[node name="Suckers" type="Node2D" parent="."]

[node name="RunAwayArea" parent="Suckers" instance=ExtResource("4_3kjme")]

[node name="GrowAnimation" type="AnimationPlayer" parent="."]
autoplay = "HoleGrowAppear"
libraries = {
"": SubResource("AnimationLibrary_7r1c0")
}

[node name="ShrinkAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v1ry4")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="ShrinkAnimation" to="." method="_on_shrink_animation_animation_finished"]
